Add queue with automation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -23,6 +24,8 @@
             </intent-filter>
 
         </activity>
+        <activity android:name="com.rightapps.undoredoapp.UndoRedoActivity" />
+        <activity android:name="com.rightapps.undoredoapp.PersonQueueActivity" />
     </application>
 
 </manifest>
